# hetGPy

./: .buildinfo  .gitignore  .readthedocs.yaml  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  README.md  build.py  changelog.md  genindex.html  index.html  notes.md  objects.inv  overview.html  poetry.toml  py-modindex.html  pyproject.toml  reference.html  requirements.txt  requirements_dev.txt  requirements_testing.txt  search.html  searchindex.js  setup.py  setup_cpp.py
.doctrees/: environment.pickle  index.doctree  overview.doctree  reference.doctree
_modules/: index.html
_sources/: index.rst.txt  overview.rst.txt
api/: IMSE.html  LOO.html  contour.html  covariance_functions.html  find_reps.html  hetGP.html  homGP.html  index.html  optim.html  plot.html
docs/: conf.py  index.rst  reference.rst  requirements_docs.txt
examples/: 00-basic-usage.ipynb  00-hetGPy-Intro.ipynb  01-mcycle-example.ipynb  02-SIR-example.ipynb  03-EI-example.ipynb  04-IMSPE.ipynb  05-Update.ipynb  06-Sequential-Design.ipynb  07-crnGP-example.ipynb  GPyTorch-vs-hetGPy-1D.ipynb  README.md  index.rst  run_examples.py
hetgpy/: IMSE.py  LOO.py  __init__.py  auto_bounds.py  check_matern.py  contour.py  cov_jax.py  covariance_functions.py  crnGP.py  example_data.py  find_reps.py  gauss.cpp  hetGP.py  homGP.py  homGP_jax.py  install_cpp.py  io.py  matern.cpp  matern_tmp.txt  matern_utils.py  matern_utils_eigen.cpp  optim.py  plot.py  predict.py  setup.py  test_functions.py  test_matern_import.py  update_covar.py  utils.py
notebooks/: 01-mcycle-example.ipynb  02-SIR-example.ipynb  03-EI-example.ipynb
paper/: paper.bib  paper.md  paper_requirements.txt
tests/: README.md  Z0_no_normal_no_rescale.csv  covar_scratch.py  debug_ll_hom.R  install_R.py  test_EI.py  test_EI_f1d.py  test_IMSPE_accuracy.py  test_IMSPE_argmin.py  test_SIR.py  test_allocate_mult.py  test_anisotropic.py  test_auto_bounds.py  test_changing_dimensions.py  test_checkHom.py  test_cov_Gauss.py  test_cov_gen.py  (+27 more)
(+134 files in other folders)
