[project]
name = "hetgpy"
version = "0.1.0"
description = "Python implementation of hetGP"
authors = [
{name="David O'Gara", email="david.ogara@wustl.edu"},
]
readme = "README.md"
requires-python = ">3.10"


dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages=['hetgpy','tests','docs']




[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "setuptools-cpp","pybind11"]




