[project]
name = "hetgpy"
version = "1.0.0"
description = "Python implementation of hetGP"
authors = [
{name="David O'Gara", email="david.ogara@wustl.edu"},
{name="Mickaël Binois", email="mickael.binois@inria.fr"},
]
readme = "README.md"
requires-python = ">3.10"


dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools]
packages=['hetgpy','tests','docs','eigen']
[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies = {dev = { file = ["requirements_dev.txt"] }}



[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "wheel", "setuptools-cpp","pybind11","requests"]




